TypeChecking/test_cases/bad/bad-self-3.cl
class Main inherits SELF_TYPE {
  main( ) : Object { 5 } ; 

  foo(x : Int, y : String) : Int { 5 } ; 
} ;

